deploy/kustomize/fetchmail/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fetchmail
  labels:
    app.kubernetes.io/component: fetchmail
    app.kubernetes.io/instance: mail
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: fetchmail
      app.kubernetes.io/instance: mail
  template:
    metadata:
      labels:
        app.kubernetes.io/component: fetchmail
        app.kubernetes.io/instance: mail
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/component: fetchmail
                    app.kubernetes.io/instance: mail
                topologyKey: kubernetes.io/hostname
              weight: 1
      containers:
        - name: fetchmailmgr
          image: ghcr.io/jeboehm/fetchmailmgr:0.3.21@sha256:26c4691b28a4d97f55fb3c4b4d1331478f9c1966d2d351293d7b8071f26e0654
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
              scheme: HTTP
            failureThreshold: 5
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 15
          resources:
            limits:
              cpu: 100m
              memory: 64Mi
            requests:
              cpu: 50m
              memory: 32Mi
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            runAsUser: 65534
            runAsGroup: 65534
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: tmp
              mountPath: /run/fetchmailmgr
      securityContext:
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
      volumes:
        - name: tmp
          emptyDir: {}
