deploy/kustomize/fetchmail/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fetchmail-network-policy
  labels:
    app.kubernetes.io/component: fetchmail
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: fetchmail
      app.kubernetes.io/instance: mail
  policyTypes:
    - Ingress
  ingress:
    # Allow all pod-to-pod communication within the namespace
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 3000 # Fetchmail
